@@ -1,5 +1,5 @@
 
-R version 2.6.2 (2008-02-08)
+R version 2.7.1 (2008-06-23)
 Copyright (C) 2008 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -36,18 +36,18 @@ Type 'q()' to quit R.
 +                outer <- (oma4 <- pp$oma[4]) > 0; mar4 <- pp$mar[4]
 +                mtext(sprintf("help(\"%s\")", nameEx()), side = 4,
 +                      line = if(outer)max(1, oma4 - 1) else min(1, mar4 - 1),
-+               outer = outer, adj = 1, cex = .8, col = "orchid", las=3)
++                outer = outer, adj = 1, cex = .8, col = "orchid", las=3)
 +            }
 +        },
 +        pos = "CheckExEnv")
 > assign("grid_plot_hook",
 +        function() {
-+            pushViewport(viewport(width=unit(1, "npc") - unit(1, "lines"),
-+                                  x=0, just="left"))
-+            grid.text(sprintf("help(\"%s\")", nameEx()),
-+                      x=unit(1, "npc") + unit(0.5, "lines"),
-+                      y=unit(0.8, "npc"), rot=90,
-+                      gp=gpar(col="orchid"))
++            grid::pushViewport(grid::viewport(width=grid::unit(1, "npc") - 
++                               grid::unit(1, "lines"), x=0, just="left"))
++            grid::grid.text(sprintf("help(\"%s\")", nameEx()),
++                            x=grid::unit(1, "npc") + grid::unit(0.5, "lines"),
++                            y=grid::unit(0.8, "npc"), rot=90,
++                            gp=grid::gpar(col="orchid"))
 +        },
 +        pos = "CheckExEnv")
 > setHook("plot.new",     get("base_plot_hook", pos = "CheckExEnv"))
@@ -75,7 +75,13 @@ Type 'q()' to quit R.
 +        },
 +        pos = "CheckExEnv")
 > assign("ptime", proc.time(), pos = "CheckExEnv")
+> ## at least one package changes these via ps.options(), so do this
+> ## before loading the package.
+> ## Use postscript as incomplete files may be viewable, unlike PDF.
+> ## Choose a size that is close to on-screen devices, fix paper
+> ps.options(width = 7, height = 7, paper = "a4", reset = TRUE)
 > grDevices::postscript("multcomp-Ex.ps")
+> 		      
 > assign("par.postscript", graphics::par(no.readonly = TRUE), pos = "CheckExEnv")
 > options(contrasts = c(unordered = "contr.treatment", ordered = "contr.poly"))
 > options(warn = 1)    
@@ -922,15 +928,15 @@ Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’
 
 Fit: NULL
 
-Estimated Quantile = -1.7957
+Estimated Quantile = -1.8432
 90% family-wise confidence level
  
 
 Linear Hypotheses:
-             Estimate lwr     upr    
-V2 - V1 >= 0 -2.1333     -Inf  0.7466
-V3 - V1 >= 0 -7.4667     -Inf -4.5868
-V4 - V1 >= 0 -1.6667     -Inf -0.0779
+             Estimate lwr      upr     
+V2 - V1 >= 0 -2.13330     -Inf  0.82281
+V3 - V1 >= 0 -7.46670     -Inf -4.51059
+V4 - V1 >= 0 -1.66670     -Inf -0.03588
 
 > 
 > 
@@ -1186,7 +1192,7 @@ Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’
 > ### * <FOOTER>
 > ###
 > cat("Time elapsed: ", proc.time() - get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  16.737 0.028 16.833 0 0 
+Time elapsed:  16.369 0.012 16.392 0 0 
 > grDevices::dev.off()
 null device 
           1 
